Fix pill spacing

--- a/resources/sass/components/_post-preview.scss
+++ b/resources/sass/components/_post-preview.scss
@@ -50,6 +50,11 @@
     font-size: 14px;
     color: $neutral-350;
   }
+  @include e("tags") {
+    .pill + .pill {
+      margin-left: .5rem;
+    }
+  }
 }
 
 @include breakpoint("mobile") {
